Update readme and env file

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-PGUSER=PGUSER
-PGHOST=PGHOST
-PGDATABASE=PGDATABASE
-PGPASSWORD=PGPASSWORD
-PGPORT=PGPORT
+PGUSER=postgres
+PGHOST=nodedocker_postgres_1
+PGDATABASE=postgres
+PGPASSWORD=dockeradmin
+PGPORT=5432
